make changes in server folder

--- a/server/env.example
+++ b/server/env.example
@@ -1,4 +1,5 @@
 PORT=5001
 MONGODB_URI=mongodb+srv://kapilsharma72:kapilsharma0123@kapil.mjoksxa.mongodb.net/helpdesk-mini
 JWT_SECRET=0950f7aeb35cee706a8afa614021482043851f8f
-NODE_ENV=development
+NODE_ENV=production
+ALLOWED_ORIGINS=https://your-render-app.onrender.com
